# MatricesAndVectors

./: CMakeLists.txt  README.md
include/: Array2DWrapper.hpp  Matrix.hpp  Scalar.hpp  Vector.hpp
test/: MatrixTest.cpp  ScalarTest.cpp  main_test.cpp  matrix_test.cpp  vector_test.cpp
